[package]

name = "js"
version = "0.1.0"
authors = ["The Servo Project Developers"]

build = "build.rs"

[features]
debugmozjs = ['mozjs_sys/debugmozjs']

[dependencies.mozjs_sys]
git = "https://github.com/tschneidereit/mozjs"
rev = "c9cb19cdb16f0caed0fe132601440759b12ad764"

[dependencies]
libc = "*"
rustc-serialize = "*"
log = "*"
heapsize = "0.1.1"
